--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -36,3 +37,143 @@
     transform: rotate(360deg);
   }
 }
+.name{
+  text-align: center;
+}
+.main{
+  border: 1px solid none;
+  margin: 60px 50px;
+  padding: 20px;
+  height: 150px;
+  box-shadow: 5px 10px 18px lightblue;
+  background-color: antiquewhite;
+  
+}
+.product input{
+  margin: 5px;
+  padding: 7px;
+  border-radius: 7px;
+  border-color: #acbfe7;
+  
+}
+.add{
+  padding: 7px;
+  margin-left: 20px;
+  background-color: #cdf2e6;
+
+}
+.save{
+  margin: 30px 20px 0 79%;
+  padding: 7px;
+  width: 100px;
+  border-radius: 20px;
+  border:none;
+  background-color: white;
+  box-shadow: 5px 5px 7px lightblue;
+
+}
+.save:hover{
+  background-color: #00AEEF;
+}
+
+.item{
+  border: 1px solid black;
+  margin: 20px;
+  display: flex;
+  width: 830px;
+  height: 200px;
+  box-shadow: 2px 5px 8px gray;
+  border: none;
+}
+.item:hover{
+  box-shadow: 2px 5px 8px 5px navajowhite;
+
+}
+.img{
+    width: 110px;
+    height: 150px;
+    margin: 20px;
+}
+.title{
+
+}
+.qty{
+ 
+}
+.price{
+  
+
+}
+.date{
+
+}
+.description{
+
+}
+
+.filter{
+  border: 1px solid black;
+  width: 190px;
+  height: 235px;
+  padding: 5px;
+  margin: -20px 0px 0px 50px;
+  box-shadow: 10px 8px 15px gray;
+  border: none;
+}
+/* .date-adj{
+  width: 180px;
+  height: 25px;
+} */
+.filter input{
+  width: 170px;
+  margin: 4px;
+  height: 20px;
+}
+.btn{
+  padding: 5px;
+  width: 100px;
+  border-radius: 20px;
+  margin: 0px 0px 0px 30px;
+  background-color: #00AEEF;
+  border:none ;
+  color:rgb(228, 178, 111);
+}
+.btn:hover{
+  background-color: rgb(233, 150, 90);
+  color: white;
+}
+.do-top{
+  margin: -243px 40px 0px 270px;
+  background-color: white;
+  box-shadow: 5px 8px 15px 10px gray;
+  padding: 5px;
+
+}
+.pre-next{
+  padding: 2px;
+  margin-left: 700px;
+}
+.pre-next button{
+    padding: 7px;
+    margin: 4px;
+    background-color: wheat;
+    border: none;
+    box-shadow: 5px 8px 12px gray;
+    border-radius: 7px;
+    width: 60px;
+}
+
+.pre-next button:hover{
+  background-color: aquamarine;
+
+}
+
+
+
+
+
+
+
+
+
+
